[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/Warrior.gd" type="Script" id=1]
[ext_resource path="res://Sprites/mobs/Warrior Skeleton Animations/Attack 1/Separate Sp/attack (10).png" type="Texture" id=2]
[ext_resource path="res://Animation/Mobs/Warrior_Attack1.tres" type="Animation" id=3]
[ext_resource path="res://Animation/Mobs/Warrior_Attack2.tres" type="Animation" id=4]
[ext_resource path="res://Animation/Mobs/Warrior_Death.tres" type="Animation" id=5]
[ext_resource path="res://Animation/Mobs/Warrior_Defense.tres" type="Animation" id=6]
[ext_resource path="res://Animation/Mobs/Warrior_Walking.tres" type="Animation" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 123.407, 223.065 )

[node name="Warrior" type="KinematicBody2D"]
scale = Vector2( 0.4, 0.4 )
collision_layer = 2
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 31.809, 0 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 524288
collision_mask = 0

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 31.809, 0 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="anim" type="AnimationPlayer" parent="Sprite"]
autoplay = "Defense"
anims/Attack1 = ExtResource( 3 )
anims/Attack2 = ExtResource( 4 )
anims/Death = ExtResource( 5 )
anims/Defense = ExtResource( 6 )
anims/Walk = ExtResource( 7 )

[node name="DetectFloorLeft" type="RayCast2D" parent="."]
position = Vector2( -50, 70 )
scale = Vector2( 3, 4 )
enabled = true
cast_to = Vector2( 0, 45 )

[node name="DetectFloorRight" type="RayCast2D" parent="."]
position = Vector2( 166, 65 )
scale = Vector2( 3, 4 )
enabled = true
cast_to = Vector2( 0, 45 )

[node name="DetectWallLeft" type="RayCast2D" parent="."]
position = Vector2( 60, 170 )
rotation = 1.5708
scale = Vector2( 3, 2.5 )
enabled = true
cast_to = Vector2( 0, 45 )

[node name="DetectWallRight" type="RayCast2D" parent="."]
position = Vector2( 80, 170 )
rotation = -1.5708
scale = Vector2( 3, 2.5 )
enabled = true
cast_to = Vector2( 0, 45 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
